@@ -1,7 +1,11 @@
 Ver.1.0.5
 新規機能
-・GoogleDriveに対応
+・GoogleDriveに対応(更新不可)
 ・OneDriveに対応
+改善
+・Dropboxファイルの操作で、ネットワークアクセス時の通信中表示を行うように修正
+バグ改修
+・Dropboxファイル一覧画面で、作成ツールバーボタンが動作しない不具合を修正
 
 Ver.1.0.4
 新規機能
